@@ -4,6 +4,11 @@
 
 - v1.0.1011                                 -
 ---------------------------------------------
+- 2020-06-14                                -
+---------------------------------------------
+.: WSM: BugFix: Too many items and mistakenly show pagination (WSW-56)
+
+---------------------------------------------
 - 2020-06-13                                -
 ---------------------------------------------
 .: WSM: Task: Adding component displayed preview (WSM-77)
